# Kutilov_LR5

./: .replit  main.py  pyproject.toml  replit.nix
static/: script.js
templates/: index.html
