# =============================================
# БЛОК 1: МЕТАДАННЫЕ ПРОЕКТА
# =============================================
[tool.poetry]
name = "python-template"           # Название проекта
version = "0.1.0"                  # Версия проекта
description = ""                   # Описание проекта (пустое)
authors = ["Your Name <you@example.com>"]  # Авторы проекта

# =============================================
# БЛОК 2: ОСНОВНЫЕ ЗАВИСИМОСТИ (PRODUCTION)
# =============================================
[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"          # Версия интерпретатора Python (от 3.10 до 3.11)
numpy = "^1.22.2"                  # Библиотека для научных вычислений и работы с массивами
replit = "^3.2.4"                  # SDK для интеграции с платформой Replit
Flask = "^2.2.0"                   # Микрофреймворк для создания веб-приложений
urllib3 = "^1.26.12"               # HTTP-клиент с поддержкой connection pooling

# =============================================
# БЛОК 3: ЗАВИСИМОСТИ ДЛЯ РАЗРАБОТКИ (DEV-DEPENDENCIES)
# =============================================
[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"                 # Отладчик Python с поддержкой Debug Adapter Protocol
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}  
# Language Server Protocol сервер для Python с дополнительными компонентами:
# - yapf: автоматическое форматирование кода
# - rope: рефакторинг Python-кода (переименование, извлечение методов)
# - pyflakes: статический анализатор для проверки синтаксических ошибок

# =============================================
# БЛОК 4: СИСТЕМА СБОРКИ (BUILD SYSTEM)
# =============================================
[build-system]
requires = ["poetry-core>=1.0.0"]   # Ядро Poetry для сборки пакета
build-backend = "poetry.core.masonry.api"  # Указание на использование Poetry как backend для сборки